<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.workshop.calculator.ResultActivity">


    <TextView
        android:id="@+id/tv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test"
        android:textSize="50sp"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="41dp"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>
